--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,21 @@
   </head>
 
   <body>
+    <header class="row">
+      <div class="col-3">
+        LOGO
+      </div>
+      <div class="col-4">
+      The most insperational verses to keep you going
+    </div>
+    <div class="col-5">
+      <%= link_to 'Contribute', '#' %>
+      <%= link_to 'About', '#' %>
+    </header>
+
+    <br class="clear" />
+
     <%= yield %>
+  
   </body>
 </html>
