--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,24 @@
   <body>
     <header class="row">
       <div class="col-3">
-        LOGO
+        <div class="circle">
+          <br />
+          KEEP
+          <br />
+          ON
+          <br />
+          PRAYING
+        </div>
       </div>
-      <div class="col-4">
+      <div class="col-4 slogan">
       The most insperational verses to keep you going
     </div>
-    <div class="col-5">
+    <div class="col-5 links">
       <%= link_to 'Contribute', '#' %>
       <%= link_to 'About', '#' %>
     </header>
+
+    <hr />
 
     <br class="clear" />
 
