--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,12 @@
     <br class="clear" />
 
     <div class="container">
-    <%= yield %>
-  </div>
+      <% if flash[:error].present? %>
+      <%= flash[:error].html_safe %>
+    </div>
+  <% end %> 
+  <%= yield %>
+</div>
 
   <div class="footer">
     <div class="row">
