added about page content, pop-up modal for new verse, styled and relocated links.

--- a/app/views/verses/about.html.erb
+++ b/app/views/verses/about.html.erb
@@ -1,3 +1,34 @@
-<div class="col-10 offset-1">
+<div class="col-10 offset-1 about">
 	<h1>About IVG</h1>
+
+  <p>
+    IVG was built by <a target="_blank" href="http://github.com/cw2981">Craig</a> 
+  </p>
+  <br />
+  <p>
+    Craig White, a relatively new web developer. Building applications to expand his knowledge and skills. With the intent of making useful tools for future applications.
+  </p>
+  <p>
+    If you want to learn how to code - start <a target="_blank" href="https://online.bootcampspot.com"> here</a>.
+  </p>
+
+  <div class="row">
+  	<div class="col-12 col-sm-4">
+  		<%= image_tag 'me.jpg', class: 'img-fluid' %>
+  	</div>
+
+  	<div class="col-12 col-sm-7 offset-sm-1">
+  		<h2 class="text-center">Craig White</h2>
+  		<br />
+  		<p>Craig White is a Full-Stack Ruby on Rails developer. With experience in JavaScript, HTML/CSS, and database development.
+  		</p>
+  	</div>
+  </div>
+  
 </div>
+
+<br class="clear"/>
+<br />
+<br />
+<br />
+<br />
