--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Iqg</title>
+    <title>IVG</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -26,10 +26,40 @@
       <div class="col-4 slogan">
       The most insperational verses to keep you going
     </div>
-    <div class="col-5 links">
-      <%= link_to 'Contribute', new_verse_path %>
-      <%= link_to 'About', '#' %>
-    </header>
+    <div class="col-5 links text-center">
+      <!-- Button trigger modal -->
+      <%= link_to 'Add Your Insperational Verse', '#', data: {toggle: 'modal', target: '#myModal'} %>
+      <%= link_to 'About', about_path %>
+    </div>
+  </header>
+
+     
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">×</span>
+            </button>
+          </div>
+          <%= simple_form_for Verse.new do |f| %>
+            <div class="modal-body">
+              <%= f.input :saying %>
+              <%= f.input :book %>
+              <%= f.input :chapter %>
+            </div>
+            
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <%= f.submit 'Create', class: 'btn btn-danger' %>
+            <% end %>
+          </div>
+        </div>
+      </div>
+
 
     <hr />
 
@@ -54,7 +84,5 @@
         </div>
     </div>
   </div>
-</div>
-  
   </body>
 </html>
