--- a/app/views/verses/index.html.erb
+++ b/app/views/verses/index.html.erb
@@ -1,3 +1,7 @@
+<h2>
+	<span>IVG / No. <%= @verse.id %></span>
+</h2>
+
 <h1><%= @verse.saying %></h1>
 <h2><%= @verse.book %></h2>
 <h2><%= @verse.chapter %></h2>
