Changed validation params to accept up to 550 characters. currently looking into changes to the database to allow Chapter:verse formating.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -84,7 +84,7 @@
       </div>
         <div class="col-12 col-sm-6 footer-blurp">
           Project created by <a href="https://craigwhite-webdev.com">Craig White</a><br />
-          Need more Jesus? - <a href="https://bible.com/app">Download the you version bible app!</a>
+          Need more Jesus? - <a href="https://bible.com/app">Download the YouVersion bible app!</a>
         </div>
     </div>
   </div>
