finished database, now allows Chapter:verse. pushing to heroku.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,8 @@
               <br />
               <%= f.input :book, label: "which book of the bible?", placeholder: "\"Luke\"" %>
               <br />
-              <%= f.input :chapter, label: "What chapter is the verse located?", placeholder: "1:37"  %>
+              <%= f.input :chapter, label: "What chapter is the verse located?", placeholder: "1"  %>
+              <%= f.input :verse, label: "what verse of the chapter", placeholder: "37" %>
             </div>
             
           </div>
