--- a/app/views/verses/index.html.erb
+++ b/app/views/verses/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <h1><%= @verse.saying %></h1>
 <h2><%= @verse.book %></h2>
-<h2><%= @verse.chapter %></h2>
+<h2><%= @verse.chapter %>:<%= @verse.verse %></h2>
